--- a/pagina01.html
+++ b/pagina01.html
@@ -18,8 +18,8 @@
         </nav>
     </div>
 
-    <div class="caixaTigre">
-        <img id="tigre" src="tigre.png" alt="">
+    <div class="caixaGolfinho">
+        <img id="golfinho" src="golfinho.png" alt="">
     </div>
     
 </body>
