--- a/pagina02.html
+++ b/pagina02.html
@@ -18,8 +18,8 @@
         </nav>
     </div>
 
-    <div class="caixaTigre2">
-        <img id="tigre" src="tigre.png" alt="">
+    <div class="caixaGolfinho2">
+        <img id="golfinho" src="golfinho.png" alt="">
     </div>
 
 </body>
