--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
           </ul>
       </nav>
   </div>
-  
-    <h1>Página de Isabelly</h1>
-    <p>Turma: 1I - Número: 11</p>
-   
-    <div  class="caixa1">
-      Caixa 1
-    </div>
+  <div class="Golfinho">
+    <h1>Curiosidades sobre os Golfinhos</h1>
 
-    <div  class="caixa2">
-      Caixa 2
-    </div>
+    <h2>-Golfinhos caçam em bandos e nadam em cardumes de até 200 indivíduos;</h2>
+    <h2>-De acordo com a classificação de Lineu, os golfinhos fazem parte do Reino Animal, na classe dos mamíferos, da ordem Cetacea, da família Delphinidae e da ordem dos Odontocenti; </h2>
+    <h2>-Existem cerca de 35 espécies de golfinho conhecidas no mundo hoje;</h2>
+    <h2>-Golfinhos costumam interagir com outras espécies aquáticas e também com os humanos;</h2>
+    <h2>-Aqui no Brasil, temos uma espécie nativa de golfinho vivendo em águas amazônicas: é o famoso boto cor-de-rosa, personagem principal de uma lenda popular do folclore brasileiro;</h2>
+    <h4>-TRABALHO DE: ANA JULIA N3, FERNANDA N9, ISABELLY N11</h4>
+  </div>
+  <div class="rodape">
+    Aluno: Isabelly Otelakoski de Oliveira - N.11 - Primeiro I
+  </div>
 
   </body>
 </html>
